apps/external/radarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.joejad.com`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
